--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li>
           <div class="logo">
-            <img alt="CODE7X" src="LOGO.png">
+            <img alt="CODE7X" src="LOGO.jpg">
             </img>
           </div>
         </li>
