--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           </div>
         </li>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="index.html">INFO</a></li>
-        <li><a href="index.html">LAB</a></li>
-        <li><a href="index.html">EXTRAS</a></li>
+        <li><a href="#">INFO</a></li>
+        <li><a href="#">LAB</a></li>
+        <li><a href="#">EXTRAS</a></li>
       </ul>
     </nav>
   </header>
