--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </a>
   </p>
   <div class="transbox">
-    
+      <p>
+  Welcome to this space — where creativity meets logic, and every pixel has a purpose. I'm Ishan aka CODE7X, a passionate crafter of ideas, code, and concepts & an explorer of new possibilities. Join in to transcend my perspectives, ideas, and implementations
+     </p>
   </div>
   
   
