--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </p>
   <div class="transbox">
       <p>
-  Welcome to this space — where creativity meets logic, and every pixel has a purpose. I'm Ishan aka CODE7X, a passionate crafter of ideas, code, and concepts & an explorer of new possibilities. Join in to transcend my perspectives, ideas, and implementations
+  Welcome to this space — where creativity meets logic, and every pixel has a purpose. I'm Ishan aka CODE7X, a passionate crafter of ideas, code, and concepts & an explorer of new possibilities. Join in to transcend into my perspectives, ideas, and implementations
      </p>
   </div>
   
