--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
   Welcome to this space — where creativity meets logic, and every pixel has a purpose. I'm Ishan aka CODE7X, a passionate crafter of ideas, code, and concepts & an explorer of new possibilities. Join in to transcend into my perspectives, ideas, and implementations
      </p>
   </div>
-  
-  
+  <div class="sepratorP">
+    <span style="margin-left:25%;">+</span>
+    <span style="margin-left:50%;">+</span>
+    <span style="margin-left:75%;">+</span>
+  </div>
+  <div class="sepratorP">
+    <span style="margin-left:25%;">+</span>
+    <span style="margin-left:50%;">+</span>
+    <span style="margin-left:75%;">+</span>
+  </div>
   
   
   <foorter>
