--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <li>
           <div class="logo">
             <img alt="CODE7X" src="LOGO.jpg">
-            </img>
           </div>
         </li>
         <li><a href="index.html">HOME</a></li>
@@ -42,14 +41,12 @@
      </p>
   </div>
   <div class="sepratorP">
-    <span style="margin-left:25%;">+</span>
-    <span style="margin-left:50%;">+</span>
-    <span style="margin-left:75%;">+</span>
+    <pre>
+      +            +            +
+    </pre>
   </div>
-  <div class="sepratorP">
-    <span style="margin-left:25%;">+</span>
-    <span style="margin-left:50%;">+</span>
-    <span style="margin-left:75%;">+</span>
+  <div class="transbox">
+    hello123
   </div>
   
   
