--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
       +            +            +
     </pre>
   </div>
-  <div class="transbox">
-    hello123
+  <div class="transbox" style="height:150px;">
+    <div class="childdiv">
+      <h3>Academic Status</h3>
+      <p>-- To Be Updated --</p>
+  </div>
+    <div class="childdiv">
+      <h3>Personal Status</h3>
+      <p>Exploring new new things</p>
+    </div>
   </div>
   
   
