--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li>
           <div class="logo">
-            <img alt="CODE7X" src="LOGO.jpg">
+            <img alt="CODE7X" src="LOGO.png">
           </div>
         </li>
         <li><a href="index.html">HOME</a></li>
