--- a/indexo.html
+++ b/indexo.html
@@ -17,6 +17,11 @@
   <header>
     <nav>
       <ul>
+        <li>
+          <div class="logo">
+            <img alt="CODE7X" src="LOGO.png">
+          </div>
+        </li>
         <li><a href="index.html">HOME</a></li>
         <li><a href="#">INFO</a></li>
         <li><a href="#">LAB</a></li>
@@ -37,7 +42,7 @@
   </div>
   <div class="sepratorP">
     <pre>
-      +            +            +
+      +            +            +            +            +
     </pre>
   </div>
   <div class="transbox" style="height:150px;">
