--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
       +            +            +
     </pre>
   </div>
-  <div class="transbox" style="height:150px;">
+  <div class="transbox">
     <div class="childdiv">
       <h3>Academic Status</h3>
-      <p>-- To Be Updated --</p>
+      <p>-- To Be Updated -  justify-items: space-between;
+  align-items:center;  justify-items: space-between;
+-</p>
   </div>
     <div class="childdiv">
       <h3>Personal Status</h3>
