--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
   <div class="transbox">
     <div class="childdiv">
       <h3>Academic Status</h3>
-      <p>-- To Be Updated -  justify-items: space-between;
-  align-items:center;  justify-items: space-between;
--</p>
+      <p>-- To Be Updated --</p>
   </div>
     <div class="childdiv">
       <h3>Personal Status</h3>
