--- a/index.html
+++ b/index.html
@@ -21,39 +21,14 @@
         <li><a href="#">INFO</a></li>
         <li><a href="#">LAB</a></li>
         <li><a href="#">EXTRAS</a></li>
+        <li>
+          <div><p>Ishan Mani Singh</p></div>
+        </li>
       </ul>
     </nav>
   </header>
   
-  <p class="headingone">
-    <a href="https://code7x.netlify.app/" class="headingone">
-      CODE7X 
-    </a>
-  </p>
-  <div class="transbox">
-      <p>
-  Welcome to this space — where creativity meets logic, and every pixel has a purpose. I'm Ishan aka CODE7X, a passionate crafter of ideas, code, and concepts & an explorer of new possibilities. Join in to transcend into my perspectives, ideas, and implementations
-     </p>
-  </div>
-  <div class="sepratorP">
-    <pre>
-      +            +            +
-    </pre>
-  </div>
-  <div class="transbox">
-    <div class="childdiv">
-      <h3>Academic Status</h3>
-      <p>-- To Be Updated --</p>
-  </div>
-    <div class="childdiv">
-      <h3>Personal Status</h3>
-      <p>Exploring new new things</p>
-    </div>
-  </div>
-  
-  
-  <foorter>
-  </foorter>
+
 <script src="main.js"></script>
 </body>
 </html>
