--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
     </nav>
   </header>
   <div class="panel">
+    <div class="panel" style="background-color:#000000; left:20px; top:20px; border-top-left-radius:30px; height:1060px;">
+    </div>
   </div>
-
+<footer>
+  © Ishan Mani Singh. All rights reserved. • Thanks for visiting! • Keep exploring & keep learning!
+</footer>
 <script src="main.js"></script>
 </body>
 </html>
